// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the with populated data 1`] = `
<div
  class="sc-bdnxRM chIzhu"
>
  <h1
    class="sc-gtsrHT cqwjKz"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-dlnjwi fkjZCr"
  >
    <li
      class="sc-jSFjdj kyqqnW"
    >
      <img
        class="sc-eCApnc fsqFbw"
        data-testid="profiles-picture"
        src="/images/users//images/users/1.png.png"
      />
      <p
        class="sc-hKFxyN xvobz"
      >
        Steven Webster
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the with populated data but misc profile image 1`] = `
<div
  class="sc-bdnxRM chIzhu"
>
  <h1
    class="sc-gtsrHT cqwjKz"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-dlnjwi fkjZCr"
  >
    <li
      class="sc-jSFjdj kyqqnW"
    >
      <img
        class="sc-eCApnc fsqFbw"
        data-testid="profiles-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="sc-hKFxyN xvobz"
      >
        Steven Webster
      </p>
    </li>
  </ul>
</div>
`;
